tests/snapshots/scenarios__redispute_after_resolve.snap
---
source: tests/scenarios.rs
assertion_line: 105
expression: run_and_normalise(input)
---
client,available,held,total,locked
1,0.0000,10.0000,10.0000,false
