tests/snapshots/scenarios__unknown_row_skipped.snap
---
source: tests/scenarios.rs
expression: run_and_normalise(input)
---
client,available,held,total,locked
1,3.0000,0.0000,3.0000,false
